webapp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: webapp
    labels: 
      name: webapp
