webapp-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
 name: external-api
subsets:
 - addresses:
   - ip: xxx.xxx.xxx.xxx
   ports:
   - port: 80
